--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -104,9 +104,49 @@
                 </div>
               </div>
             </div>
+            <div class="col-xl-3 col-md-6" *ngIf="isTeacher">
+                <div class="card card-stats shadow mb-4 mb-xl-0">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Notices</h5>
+                        <span class="h2 font-weight-bold mb-0">13</span>
+                      </div>
+                      <div class="col-auto">
+                        <div class="icon icon-shape bg-info text-white rounded-circle shadow">
+                          <i class="fas fa-bullhorn"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <p class="mt-3 mb-0 text-muted text-sm">
+                      <a [routerLink]="['/notices']"><span class="text-warning mr-2"><i class="fa fa-arrow-right"></i> View</span></a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xl-3 col-md-6" *ngIf="isTeacher">
+                <div class="card card-stats shadow mb-4 mb-xl-0">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Exam Results</h5>
+                        <span class="h2 font-weight-bold mb-0">13</span>
+                      </div>
+                      <div class="col-auto">
+                        <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                          <i class="fas fa-chart-line"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <p class="mt-3 mb-0 text-muted text-sm">
+                      <a [routerLink]="['/results']"><span class="text-warning mr-2"><i class="fa fa-arrow-right"></i> View</span></a>
+                    </p>
+                  </div>
+                </div>
+              </div>
         </div>
         <div class="row pt-5">
-          <div class="col-xl-3 col-md-6" *ngIf="!isParentorStudent">
+          <div class="col-xl-3 col-md-6" *ngIf="!isParentorStudent && !isTeacher">
             <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
@@ -126,7 +166,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6" *ngIf="isParentorStudent">
+          <div class="col-xl-3 col-md-6" *ngIf="isParentorStudent || isTeacher">
               <div class="card card-stats shadow mb-4 mb-xl-0">
                 <div class="card-body">
                   <div class="row">
@@ -142,6 +182,27 @@
                   </div>
                   <p class="mt-3 mb-0 text-muted text-sm">
                     <a [routerLink]="['/materials']"><span class="text-warning mr-2"><i class="fa fa-arrow-right"></i> View</span></a>
+                  </p>
+                </div>
+              </div>
+            </div>
+
+          <div class="col-xl-3 col-md-6">
+              <div class="card card-stats shadow mb-4 mb-xl-0">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col">
+                      <h5 class="card-title text-uppercase text-muted mb-0">Timetables</h5>
+                      <span class="h2 font-weight-bold mb-0">13</span>
+                    </div>
+                    <div class="col-auto">
+                      <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
+                        <i class="fas fa-calendar-alt"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <p class="mt-3 mb-0 text-muted text-sm">
+                    <a [routerLink]="['/timetables']"><span class="text-warning mr-2"><i class="fa fa-arrow-right"></i> View</span></a>
                   </p>
                 </div>
               </div>
@@ -188,27 +249,7 @@
           </div>
         </div>
         <div class="row pt-5">
-          <div class="col-xl-3 col-md-6">
-            <div class="card card-stats shadow mb-4 mb-xl-0">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col">
-                    <h5 class="card-title text-uppercase text-muted mb-0">Timetables</h5>
-                    <span class="h2 font-weight-bold mb-0">13</span>
-                  </div>
-                  <div class="col-auto">
-                    <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
-                      <i class="fas fa-calendar-alt"></i>
-                    </div>
-                  </div>
-                </div>
-                <p class="mt-3 mb-0 text-muted text-sm">
-                  <a [routerLink]="['/timetables']"><span class="text-warning mr-2"><i class="fa fa-arrow-right"></i> View</span></a>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-3 col-md-6">
+          <div class="col-xl-3 col-md-6" *ngIf="!isTeacher">
             <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
@@ -228,7 +269,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6">
+          <div class="col-xl-3 col-md-6" *ngIf="!isTeacher">
             <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
