--- a/src/app/components/materials/materials.component.html
+++ b/src/app/components/materials/materials.component.html
@@ -31,3 +31,126 @@
   </ul>
 
   </div>
+
+  <div class="container my-4 mx-4" *ngIf="isTeacher">
+      <div class="row">
+        <div class="col-12">
+            <div class="card shadow mr-5" style="min-width: 18rem;" *ngFor="let sub of subjects">
+              <!-- <img class="card-img-top" src="../../assets/img/theme/img-1-1000x900.jpg" alt="Card image cap"> -->
+              <div class="card-body">
+                  <div class="row">
+                      <div class="col-6"> <h2 class="card-title">{{sub.name}}</h2> </div>
+                    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                    <div class="col-6"> <a href="/materials?subject={{sub.id}}" class="btn btn-primary btn-sm float-right mr-3" style="font-size:15px;">View</a></div>
+                  </div>
+              </div>
+            </div>
+        </div>
+      </div>
+
+    <p *ngIf="!material && !subjects">No Materials Found</p>
+    <div class="col-md-3 col-6 text-right float-right mb-4" *ngIf="isTeacher">
+      <a class="text-white btn btn-info mr-5" (click)='add()'>Add New Material</a>
+    </div>
+    <ul class="timeline timeline-left" style="padding-right: 7%" *ngIf="material">
+      <li class="timeline-inverted timeline-item" *ngFor="let mat of material">
+          <div class="timeline-badge success"></div>
+          <div class="timeline-panel">
+              <div class="timeline-heading">
+                  <h4 class="timeline-title">{{mat.title}}</h4>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> {{mat.date}}</small> </p>
+              </div>
+              <div class="timeline-body">
+                  <a href="{{mat.file}}" target="window">{{mat.file}}</a>
+              </div>
+              <div *ngIf="isTeacher" class="float-right">
+                <a href="javascript:void(0)" class="item"  (click)='edit( mat.id )' data-toggle="tooltip" data-placement="top" title="Edit" style="padding-right: 10px;">
+                    <i class="fa fa-edit"></i>
+                </a>
+                <a href="javascript:void(0)" class="item"  (click)='delete( mat.id )' data-toggle="tooltip" data-placement="top" title="Delete" style="padding-right: 10px;">
+                    <i class="fa fa-trash"></i>
+                </a>
+              </div>
+          </div>
+      </li>
+    </ul>
+
+    </div>
+
+
+    <!-- The Modal -->
+  <div id="editModal" class="modal" style="background-color: rgb(0,0,0); background-color: rgba(0,0,0,0.4);">
+
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Edit Document</h5>
+              <button type="button" class="close" (click)='closeEditModal()'>
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                <div class="alert alert-danger" [hidden]="!error.title">
+                    {{ error.title }}
+                  </div>
+                <div class="alert alert-danger" [hidden]="!error.file">
+                    {{ error.file }}
+                  </div>
+              <form #newUserForm=ngForm>
+                <div class="form-group">
+                    <label for="name">Title</label>
+                    <input type="text" class="form-control" id="name" name="title" placeholder="Enter Title"  required [(ngModel)]="data.title"/>
+                </div>
+                <div class="form-group">
+                    <label for="name">File</label>
+                    <input type="file" class="form-control" id="name" name="file" required [(ngModel)]="data.file"/>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-primary"  [disabled]="!newUserForm.valid" (click)='editsubmit()'>Save changes</button>
+              <button type="button" class="btn btn-secondary" (click)='closeEditModal()'>Close</button>
+            </div>
+          </div>
+        </div>
+
+  </div>
+
+  <!-- The Modal -->
+  <div id="addModal" class="modal" style="background-color: rgb(0,0,0); background-color: rgba(0,0,0,0.4);">
+
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Add New Document</h5>
+              <button type="button" class="close" (click)='closeAddModal()'>
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                <div class="alert alert-danger" [hidden]="!error.title">
+                    {{ error.title }}
+                  </div>
+                <div class="alert alert-danger" [hidden]="!error.file">
+                    {{ error.file }}
+                  </div>
+              <form #editUserForm=ngForm>
+
+                  <div class="form-group">
+                      <label for="name">Title</label>
+                      <input type="text" class="form-control" id="name" name="title" placeholder="Enter Title"  required [(ngModel)]="data.title"/>
+                  </div>
+                  <div class="form-group">
+                      <label for="name">File</label>
+                      <input type="file" class="form-control" id="name" name="file" required [(ngModel)]="data.file"/>
+                  </div>
+              </form>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" (click)='addModalSubmit()' [disabled]="!editUserForm.valid">Save changes</button>
+              <button type="button" class="btn btn-secondary" (click)='closeAddModal()'>Close</button>
+            </div>
+          </div>
+        </div>
+  </div>
