--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title text-uppercase text-muted mb-0">Students</h5>
-                    <span class="h2 font-weight-bold mb-0">13</span>
+                    <span class="h2 font-weight-bold mb-0"><!--13--></span>
                   </div>
                   <div class="col-auto">
                     <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
@@ -30,7 +30,7 @@
                   <div class="row">
                     <div class="col">
                       <h5 class="card-title text-uppercase text-muted mb-0">Students</h5>
-                      <span class="h2 font-weight-bold mb-0">13</span>
+                      <span class="h2 font-weight-bold mb-0"><!--13--></span>
                     </div>
                     <div class="col-auto">
                       <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
@@ -50,7 +50,7 @@
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title text-uppercase text-muted mb-0">Teachers</h5>
-                    <span class="h2 font-weight-bold mb-0">13</span>
+                    <span class="h2 font-weight-bold mb-0"><!--13--></span>
                   </div>
                   <div class="col-auto">
                     <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
@@ -70,7 +70,7 @@
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title text-uppercase text-muted mb-0">Parents</h5>
-                    <span class="h2 font-weight-bold mb-0">13</span>
+                    <span class="h2 font-weight-bold mb-0"><!--13--></span>
                   </div>
                   <div class="col-auto">
                     <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
@@ -90,7 +90,7 @@
                   <div class="row">
                     <div class="col">
                       <h5 class="card-title text-uppercase text-muted mb-0">Classes</h5>
-                      <span class="h2 font-weight-bold mb-0">13</span>
+                      <span class="h2 font-weight-bold mb-0"><!--13--></span>
                     </div>
                     <div class="col-auto">
                       <div class="icon icon-shape bg-info text-white rounded-circle shadow">
@@ -110,7 +110,7 @@
                     <div class="row">
                       <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Notices</h5>
-                        <span class="h2 font-weight-bold mb-0">13</span>
+                        <span class="h2 font-weight-bold mb-0"><!--13--></span>
                       </div>
                       <div class="col-auto">
                         <div class="icon icon-shape bg-info text-white rounded-circle shadow">
@@ -130,7 +130,7 @@
                     <div class="row">
                       <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Exam Results</h5>
-                        <span class="h2 font-weight-bold mb-0">13</span>
+                        <span class="h2 font-weight-bold mb-0"><!--13--></span>
                       </div>
                       <div class="col-auto">
                         <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
@@ -152,7 +152,7 @@
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title text-uppercase text-muted mb-0">Subjects</h5>
-                    <span class="h2 font-weight-bold mb-0">13</span>
+                    <span class="h2 font-weight-bold mb-0"><!--13--></span>
                   </div>
                   <div class="col-auto">
                     <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
@@ -172,7 +172,7 @@
                   <div class="row">
                     <div class="col">
                       <h5 class="card-title text-uppercase text-muted mb-0">Materials</h5>
-                      <span class="h2 font-weight-bold mb-0">13</span>
+                      <span class="h2 font-weight-bold mb-0"><!--13--></span>
                     </div>
                     <div class="col-auto">
                       <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
@@ -193,7 +193,7 @@
                   <div class="row">
                     <div class="col">
                       <h5 class="card-title text-uppercase text-muted mb-0">Timetables</h5>
-                      <span class="h2 font-weight-bold mb-0">13</span>
+                      <span class="h2 font-weight-bold mb-0"><!--13--></span>
                     </div>
                     <div class="col-auto">
                       <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
@@ -213,7 +213,7 @@
                   <div class="row">
                     <div class="col">
                       <h5 class="card-title text-uppercase text-muted mb-0">School Fees</h5>
-                      <span class="h2 font-weight-bold mb-0">13</span>
+                      <span class="h2 font-weight-bold mb-0"><!--13--></span>
                     </div>
                     <div class="col-auto">
                       <div class="icon icon-shape bg-info text-white rounded-circle shadow">
@@ -233,7 +233,7 @@
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title text-uppercase text-muted mb-0">Attendance</h5>
-                    <span class="h2 font-weight-bold mb-0">13</span>
+                    <span class="h2 font-weight-bold mb-0"><!--13--></span>
                   </div>
                   <div class="col-auto">
                     <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
@@ -255,7 +255,7 @@
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title text-uppercase text-muted mb-0">Notices</h5>
-                    <span class="h2 font-weight-bold mb-0">13</span>
+                    <span class="h2 font-weight-bold mb-0"><!--13--></span>
                   </div>
                   <div class="col-auto">
                     <div class="icon icon-shape bg-info text-white rounded-circle shadow">
@@ -275,7 +275,7 @@
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title text-uppercase text-muted mb-0">Exam Results</h5>
-                    <span class="h2 font-weight-bold mb-0">13</span>
+                    <span class="h2 font-weight-bold mb-0"><!--13--></span>
                   </div>
                   <div class="col-auto">
                     <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
@@ -295,7 +295,7 @@
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title text-uppercase text-muted mb-0">Student Location</h5>
-                    <span class="h2 font-weight-bold mb-0">13</span>
+                    <span class="h2 font-weight-bold mb-0"><!--13--></span>
                   </div>
                   <div class="col-auto">
                     <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
