--- a/src/app/components/password/request-reset/request-reset.component.html
+++ b/src/app/components/password/request-reset/request-reset.component.html
@@ -1,23 +1,48 @@
-<div class="body">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-        <div class="card card-signin my-5">
-          <div class="card-body">
-            <div class="alert alert-danger" [hidden]="!error">
-              {{ error }}
-            </div>
-            <h5 class="card-title text-center">Reset Password</h5>
-            <form class="form-signin" #passwordResetForm=ngForm (ngSubmit)="onSubmit()">
-              <div class="form-label-group">
-                <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Enter Email address" required autofocus [(ngModel)]="form.email">
-                <label for="inputEmail">Email address</label>
-              </div>
-              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" [disabled]="!passwordResetForm.valid">Reset Password</button>
-            </form>
-          </div>
+<div class="main-content bg-default">
+    <!-- Header -->
+    <div class="header bg-gradient-primary py-4 py-lg-5">
+      <div class="container">
+        <div class="header-body text-center mb-7">
         </div>
       </div>
+
+      <div class="body">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+                <div class="card card-signin my-5">
+                  <div class="card-body">
+                    <div class="alert alert-danger" [hidden]="!error">
+                      {{ error }}
+                    </div>
+                    <h5 class="card-title text-center">Reset Password</h5>
+                    <form class="form-signin" #passwordResetForm=ngForm (ngSubmit)="onSubmit()">
+                      <div class="form-label-group">
+                        <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Enter Email address" required autofocus [(ngModel)]="form.email">
+                        <label for="inputEmail">Email address</label>
+                      </div>
+                      <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" [disabled]="!passwordResetForm.valid">Reset Password</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      <div class="separator separator-bottom separator-skew zindex-100">
+        <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+          <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
+        </svg>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
-  </div>
-</div>
+    </div>
+    <br>
+        <br>
+        <br>
+        <br>
+        <br>
